deploy/application/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: platform-launchpad
  labels:
    app.kubernetes.io/name: platform-launchpad-backend
    app.kubernetes.io/part-of: platform-launchpad
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: platform-launchpad-backend

  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
